<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/splitBillButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/split_bill"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/numberOfFrindsTextView"
        app:layout_constraintStart_toStartOf="@+id/numberOfFrindsTextView"
        app:layout_constraintTop_toBottomOf="@+id/numberOfFrindsTextView" />

    <Button
        android:id="@+id/sendBillButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/send_bill"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/baseAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="8"
        android:hint="@string/bill_amount_string"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/baseAmountLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/baseAmountLabelTextView"
        app:layout_constraintTop_toTopOf="@+id/baseAmountLabelTextView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/numberOfFrindsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="120dp"
        android:hint="@string/number_of_friends_string"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAmountTextView"
        tools:ignore="TextContrastCheck" />

    <SeekBar
        android:id="@+id/tipPercemtSeekBar"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tipPercentLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/baseAmountEditText"
        app:layout_constraintTop_toTopOf="@+id/tipPercentLabelTextView" />

    <TextView
        android:id="@+id/tipLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/tip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/baseAmountLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentLabelTextView" />

    <TextView
        android:id="@+id/totalLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/baseAmountLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/tipLabelTextView" />

    <TextView
        android:id="@+id/baseAmountLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/base_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipPercentLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/_24"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/baseAmountLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/baseAmountLabelTextView" />

    <TextView
        android:id="@+id/tipAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/the_tip_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tipLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/tipPercemtSeekBar"
        app:layout_constraintTop_toTopOf="@+id/tipLabelTextView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/totalAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/the_total_amount_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/tipAmountTextView"
        app:layout_constraintTop_toTopOf="@+id/totalLabelTextView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tipDescritpionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/acceptable_string"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tipPercemtSeekBar"
        app:layout_constraintStart_toStartOf="@+id/tipPercemtSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/tipPercemtSeekBar" />

    <TextView
        android:id="@+id/splitBillTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/split_bill_amount_string"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/splitBillButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/splitBillButton"
        app:layout_constraintTop_toBottomOf="@+id/splitBillButton"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>